--- a/4/Dockerfile.alpine3
+++ b/4/Dockerfile.alpine3
@@ -1,5 +1,5 @@
 # Base alpine image with node.js
-FROM node:boron-alpine
+FROM node:argon-alpine
 
 # This image provides a Node.JS environment you can use to run your Node.JS
 # applications.
@@ -21,7 +21,7 @@ EXPOSE 8080
 ENV \
     # Path to be used in other layers to place S2I scripts into
     STI_SCRIPTS_PATH=/usr/libexec/s2i \
-    NODEJS_VERSION=8 \
+    NODEJS_VERSION=4 \
     NPM_RUN=start \
     #NPM_CONFIG_LOGLEVEL=info \
     # The $HOME is not set by default, but some applications needs this variable
