--- a/8/Dockerfile.alpine3
+++ b/8/Dockerfile.alpine3
@@ -23,6 +23,7 @@ ENV \
     STI_SCRIPTS_PATH=/usr/libexec/s2i \
     NODEJS_VERSION=8 \
     NPM_RUN=start \
+    #NPM_CONFIG_LOGLEVEL=info \
     # The $HOME is not set by default, but some applications needs this variable
     HOME=/opt/app-root \
     PATH=$HOME/bin:$HOME/src/bin:$HOME/node_modules/.bin/:$HOME/.npm-global/bin/:$PATH \
@@ -54,7 +55,7 @@ LABEL summary="$SUMMARY" \
       version="$NODEJS_VERSION" \
       maintainer="SoftwareCollections.org <sclorg@redhat.com>" \
       help="For more information visit https://github.com/sclorg/s2i-nodejs-container" \
-      usage="s2i build <SOURCE-REPOSITORY> s2i-node-alpine:latest <APP-NAME>"
+      usage="s2i build <SOURCE-REPOSITORY> s2i-node-alpine:$NODEJS_VERSION <APP-NAME>"
 
 # This is the list of basic dependencies that all language Docker image can consume.
 RUN apk update && \
@@ -70,13 +71,21 @@ RUN apk update && \
         binutils-gold \
         libstdc++ && \
     rm -rf /var/cache/apk/* && \
-	npm install nodemon
+    mkdir /opt/app-root && \
+    npm install nodemon
 
 # Copy the S2I scripts from the specific language image to $STI_SCRIPTS_PATH
 COPY ./s2i/bin/ $STI_SCRIPTS_PATH
 
 # Copy extra files to the image.
 COPY ./root/ /
+
+# When bash is started non-interactively, to run a shell script, for example it
+# looks for this variable and source the content of this file. This will enable
+# the SCL for all scripts without need to do 'scl enable'.
+ENV BASH_ENV=/opt/app-root/etc/scl_enable \
+    ENV=/opt/app-root/etc/scl_enable \
+    PROMPT_COMMAND=". /opt/app-root/etc/scl_enable"
 
 # Drop the root user and make the content of /opt/app-root owned by user 1001
 RUN adduser -u 1001 -S -G root -h ${HOME} -s /sbin/nologin default && \
