--- a/8/Dockerfile.alpine3
+++ b/8/Dockerfile.alpine3
@@ -97,6 +97,7 @@ ENV BASH_ENV=$APP_ROOT/etc/scl_enable \
 # Drop the root user and make the content of /opt/app-root owned by user 1001
 RUN adduser -u 1001 -S -G root -h ${HOME} -s /sbin/nologin default && \
     chown -R 1001:0 $APP_ROOT && \
+    chown -R 1001:0 $STI_SCRIPTS_PATH && \
     chown -R 1001:0 /opt/usr && \
     chown -R 1001:0 /src
 
